<?xml version="1.0"?>
<package format="2">
  <name>gazebo_simulation</name>
  <version>0.0.0</version>
  <description>The gazebo_simulation package</description>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/gazebo_simulation</url>
  <maintainer email="dringakn@gmail.com">Dr. -Ing. Ahmad Kamal Nasir</maintainer>
  <author email="dringakn@gmail.com">Dr. -Ing. Ahmad Kamal Nasir</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <!-- Package required for teleoperation and 3D mapping -->
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>octomap_server</exec_depend>


  <export>
    <!-- Export package to Gazebo path -->
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
